--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 		<p>this is my first github experience .</p>
-	<p> this is first git pull with some changes</p>
+	<p> this is first git pull with some changes,adding chnages for merge conglit through gitweb interface</p>
 </body>
 </html>
